# check_cards

./: .gitignore  Cargo.toml  README.md  build.rs  firebase.json  index.html  test.html
.github/workflows/: rust.yml
src/: card_checks.rs  card_checks_acros.rs  iss_parser.rs  lib.rs  setup.rs  text_parser.rs
tests/: Combo.xlsx  Mixed Duet.xlsx  SENIOR-Team_Free-PRELIMS-OCC-.xlsx  Tech Team test.xlsx  parse_cards.rs  report.xls
