[package]
name = "check_cards"
version = "1.2.0"
edition = "2024"
publish = false
rust-version = "1.85.0"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true
opt-level = 'z'

[lints.rust]
future-incompatible = "warn"
keyword-idents = "warn"
let-underscore = "warn"
refining-impl-trait = "warn"
warnings = "warn"
unused = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing-errors-doc = "allow"
similar-names = "allow"

[build-dependencies]
chrono = "0.4.41"

[dependencies]
calamine = { version = "0.29.0", features = ["dates"] }
regex-lite = "0.1.6"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
semver = "1.0.26"
console_error_panic_hook = "0.1.7"

[dependencies.chrono]
version = "0.4.41"
default-features = false
features = ["alloc"]

[dependencies.gloo]
version = "0.11.0"
default-features = false
features = ["futures", "utils"]

[dependencies.web-sys]
version = "0.3.76"
features = ["Document", "HtmlInputElement", "HtmlTableElement", "HtmlTableSectionElement", "Text", "HtmlCollection"]

[dev-dependencies]
pretty_assertions = "1.4.1"
