[package]
name = "check_cards"
version = "1.4.0"
edition = "2024"
rust-version = "1.85.0"
description = "A tool for checking for issues in Artistic Swimming Coach Cards"
homepage = "https://check-cards.web.app"
keywords = ["artistic", "swimming", "artistic-swimming", "synchro"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/leahych/check_cards"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
strip = true

[lints.rust]
future-incompatible = "warn"
keyword-idents = "warn"
let-underscore = "warn"
refining-impl-trait = "warn"
warnings = "warn"
unused = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing-errors-doc = "allow"
similar-names = "allow"

[build-dependencies]
chrono = "0.4.43"

[dependencies]
calamine = { version = "0.33.0", features = ["chrono"] }
regex-lite = "0.1.9"
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
semver = "1.0.27"
console_error_panic_hook = "0.1.7"

[dependencies.chrono]
version = "0.4.43"
default-features = false
features = ["alloc"]

[dependencies.gloo]
version = "0.11.0"
default-features = false
features = ["futures", "utils"]

[dependencies.web-sys]
version = "0.3.83"
features = ["Document", "HtmlInputElement", "HtmlTableElement", "HtmlTableSectionElement", "Text", "HtmlCollection"]

[dev-dependencies]
pretty_assertions = "1.4.1"
